public/base.css
/* ... */
input[type=checkbox]:checked::after {
    content: " ";
    width: .1em;
    height: .25em;
    border-radius: 0;
    position: absolute;
    top: calc(50% - 0.05rem);
    left: 50%;
    background: 0 0;
    border-right: solid var(--bg) .08em;
    border-bottom: solid var(--bg) .08em;
    font-size: 1.8em;
    transform: translate(-50%, -50%) rotate(45deg);
}

@media (prefers-color-scheme: light) {
    :root {
        --border: #5b658a;
    }
}

h1 > a {
    text-decoration: none;
    background: var(--accent);
    color: var(--bg);
    padding: 0 1rem;
}

h1 > a:hover,
h1 > a:visited {
    text-decoration: none;
    color: var(--bg);
}

h1 > a:hover {
    color: var(--bg) !important;
}

header h1 .show-desktop {
    display: inline;
}

header h1 .show-mobile {
    display: none;
}

body {
    font-size: 0.9rem;
}

main {
    padding-top: 1rem;
}

body > header {
    padding-top: 0.25rem;
    padding-bottom: 0.25rem;
    position: relative;
    overflow: hidden;
}


.mascot {
    opacity: 1;
}

body > header h1 span {
    position: relative;
}

body > header h1 span > .mascot {
    position: absolute;
    left: 50%;
    bottom: -50px;
    height: 190px;
    transform: translateX(calc(-50% - 149px));
    z-index: 0;
    transition: all 0.1s ease-out;
}

body > header::after {
    content: '';
    display: block;
    position: absolute;
    bottom: 0;
    left: 0;
    width: 100%;
    height: 5px;
    background: var(--bg);
    filter: blur(5px);
    z-index: 9999;
}

@media screen and (max-width: 900px) {
    body > header h1 span > .mascot {
        left: 50%;
        bottom: -50px;
        height: 140px;
        transform: translateX(calc(-50% - 120px));
    }
}

@media screen and (max-width: 720px) and (min-width: 475px) {
    body > header h1 a {
        overflow: hidden;
    }

    body > header h1 span {
        position: relative;
        z-index: 1;
    }

    body > header h1 span > .mascot {
        height: 165px;
        transform: none;
        bottom: -80px;
        left: -61px;
        z-index: -1;
        opacity: 0.8;
    }
}

@media screen and (max-width: 475px) {
    body > header h1 {
        padding-left: 2rem !important;
    }

    body > header h1 span > .mascot {
        position: absolute;
        left: -70px;
        bottom: -50px;
        transform: none;
        height: 100px;
        clip-path: inset(0 0 38px 16px);
        z-index: -1;
    }
}

header .header__inner {
    position: relative;
    z-index: 99;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    max-width: 720px;
    margin: 0 auto;
    padding: 0 1rem;
}

header .header__age-warning {
    background: var(--bg);
    margin: -3px -8px 0 -8px;
    padding: 7px;
}

header .user-tools {
    flex: 1 1 320px;
}

header .user-tools .user-tools__nested {
    flex: 0 1 auto;
}

header .user-tools, header .user-tools .user-tools__nested {
    display: flex;
    justify-content: flex-end;
    align-items: center;
    flex-wrap: wrap;
}

header .user-tools > a {
    white-space: nowrap;
}

header .user-tools > * + * {
    margin-left: 20px;
}

header h1 {
    display: flex;
    justify-content: flex-start;
    flex: 1 1 auto;
}

header a,
header a:hover,
header a:visited {
    text-decoration: none;
}

header a.username {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    max-width: 110px;
}

header a.username,
header a:visited.username {
    color: var(--text);
}

header a:hover.username {
    color: var(--accent);
}

header a.pinged::after {
    content: '';
    display: inline-block;
    height: 0.5em;
    width: 0.5em;
    border-radius: 100%;
    background: var(--accent);
    margin-left: 0.25rem;
    transform: translateY(-0.5rem);
}

header a:hover {
    color: var(--text);
}

header a ion-icon {
    font-size: 1em;
}

header .notification-bell {
    color: var(--text);
    background: none;
    padding: 0;
    margin: 0 0 0 1rem;
}

header .notification-bell[data-has-notifs=true] {
    color: var(--accent);
}

@media screen and (max-width: 687px) {
    header h1 {
        justify-content: center;
    }
}

h2 {
    border-bottom: 1px solid var(--border);
    padding-bottom: 1rem;
    margin-bottom: 1rem;
    font-size: 2.2rem;
    font-weight: normal;
    margin-top: 2rem;
}

h2.one-line {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

a span.beta-tag,
.as-link span.beta-tag,
h2 span.beta-tag,
h3 span.beta-tag {
    background: var(--danger);
    padding: 0.25em 0.4em 0.3em;
    color: #FFF;
    font-size: 0.7em;
    transform: translateY(-1.1em) translateX(0.4em);;
    display: inline-block;
    border-radius: 0.3rem;
}

h2 > .online {
    font-size: 1rem;
    transform: translateY(-0.9rem);
    display: inline-block;
}

h2 ion-icon {
    transform: translateY(0.05em);
    font-size: 0.8em;
}

ion-icon.big {
    transform: translateY(0.15em);
    font-size: 1em;
}

h3 {
    font-size: 1.6rem;
    margin: 1.75rem 0 0.5rem;
    font-weight: normal;
}

h4 {
    text-align: center;
    margin-top: 5rem;
    margin-bottom: 0.25rem;
}

h4 + p {
    margin: 0 auto 2rem auto;
    max-width: 320px;
}

strong {
    color: var(--accent);
}

.page-break {
    margin-top: 12rem;
}

.half-page-break {
    margin-top: 5rem;
}

blockquote > .byline {
    text-align: right;
    padding-right: 3rem;
}

.flashes {
    display: flex;
    flex-direction: column;
}

.flashes > * {
    background: var(--accent-bg);
    padding: 0.5rem 1rem 0.6rem;
    border: 1px solid var(--border);
    border-top: 0;
}

.flashes > .unbounded {
    border-top: 1px solid var(--border);
    margin: 0.5rem 0;
}

.flashes > .flash--success {
    color: var(--success);
}

.flashes > .flash--success::before {
    content: "✅"
}

.flashes > .flash--danger {
    color: var(--danger);
}

.flashes > .flash--danger::before {
    content: "🚫"
}

p {
    line-height: 1.5rem;
}
/* ... */

